crates/yulgen/tests/snapshots/yulgen__abi_decode_component_bool_calldata_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::decode_component_bool(AbiDecodeLocation::Calldata)"

---
function abi_decode_component_bool_calldata(head_start, offset) -> return_val {
    let ptr := add(head_start, offset)
    return_val := calldataload(ptr)
    if iszero(is_left_padded(255, return_val)) { revert_with_Error_uint256(259) }
}
