crates/yulgen/tests/snapshots/yulgen__abi_decode_component_int16_calldata_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::decode_component_int(16, AbiDecodeLocation::Calldata)"

---
function abi_decode_component_int128_calldata(head_start, offset) -> return_val {
    let ptr := add(head_start, offset)
    return_val := calldataload(ptr)
}
