crates/yulgen/tests/snapshots/yulgen__abi_encode_u256_address_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::encode(vec![U256, Base :: Address])"

---
function abi_encode_uint256_address(encode_val_0, encode_val_1) -> return_ptr {
    return_ptr := avail()
    let data_offset := 64
    {
        let ptr := alloc(32)
        mstore(ptr, encode_val_0)
    }
    {
        let ptr := alloc(32)
        mstore(ptr, encode_val_1)
    }
}
