crates/yulgen/tests/snapshots/yulgen__abi_pack_calldata_function.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "abi_functions::pack(AbiDecodeLocation::Calldata)"

---
function abi_pack_calldata(mptr, array_size, inner_data_size) -> packed_ptr {
    packed_ptr := avail()
    for { let i := 0 } lt(i, array_size) { i := add(i, 1) } {
        let val_ptr := add(mptr, mul(i, 32))
        let val := calldataload(val_ptr)
        pop(alloc_mstoren(val, inner_data_size))
    }
}
