crates/yulgen/tests/snapshots/yulgen__constructor_no_init.snap
---
source: crates/yulgen/tests/yulgen.rs
expression: "constructor::build()"

---
code {
    let size := datasize("runtime")
    datacopy(0, dataoffset("runtime"), size)
    return(0, size)
}
